# MessageService

./: .gitignore  CMakeLists.txt  vcpkg.json
.github/workflows/: main.yml
client/: CMakeLists.txt
client/src/: client.cpp
headers/: MessageService.h
protobufModels/: CMakeLists.txt  message.proto
server/: CMakeLists.txt
server/src/: server.cpp
src/: MessageService.cpp
